# tts

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: lib.rs  main.rs  udpsocket.rs
